[package]
name = "lst_gui"
version = "1.0.0"
authors = ["Alexis LOUIS <me@alelouis.eu>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }
hifitime = "2"
chrono = "0.4"

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
